Fixed the Alignment of Apply Now Button

--- a/assets/contact.css
+++ b/assets/contact.css
@@ -93,6 +93,10 @@ nav svg {
   justify-content: space-evenly;
 }
 
+.inner-div {
+  height: 380px;
+}
+
 button {
   width: 200px;
   height: 40px;
